--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 <body>
     <h1>IOT - Practical</h1>
     <p style="text-align: center;">
-        <img src="iot-pract/WhatsApp Image 2023-12-09 at 18.31.59_8e73d1df.jpg" height="400px width400px" alt="">
+        <img src="iot-pract/WhatsApp Image 2023-12-09 at 18.31.59_8e73d1df.jpg"  alt="">
     </p>
     <Section class="main">
         <li class="tooltip"><a href="iot-pract/p2.html">Practical 2</a>
