--- a/iot-pract/p3.html
+++ b/iot-pract/p3.html
@@ -40,6 +40,9 @@
     <p style="text-align: center;">
         <img src="WhatsApp Image 2023-12-09 at 18.31.59_8e73d1df.jpg" height="400px width400px" alt="">
     </p>
+    <p style="text-align: center;">
+        <img src="p3.png" height="400px width400px" alt="">
+    </p>
     <br>
     <h4 style="text-align: center; ">2. Install Telegram app in mobile:</h4>
     <p style="text-align: center;margin: 30px 0px;">
