--- a/iot-pract/p7.html
+++ b/iot-pract/p7.html
@@ -49,11 +49,14 @@
     <p style="text-align: center;">
         <img src="WhatsApp Image 2023-12-09 at 18.31.59_8e73d1df.jpg" height="400px width400px" alt="">
     </p>
+    <p style="text-align: center;">
+        <img src="p7.png" height="400px width400px" alt="">
+    </p>
     <div class="text-boxes">
             <div class="text-box HTMLBox">
                 <div class="topic">Python code:</div>
                 <textarea id="HTMLBox" readonly>
-                    import sys
+                    import sys 
                     import time
                     import datetime
                     import RPi.GPIO as GPIO
